Fix width on mobile

--- a/src/styles/config/_grid.scss
+++ b/src/styles/config/_grid.scss
@@ -24,6 +24,7 @@ $columns: 12;
 
 @include media-query.sm() {
   .container {
+    width: 100%;
     height: fit-content;
   }
 }
